# dependency_injection_project

./: CMakeLists.txt  Dockerfile  Makefile  README.md  SPEC.md  ai.txt  llms-full.txt
k8s/: deployment.yaml
tests/: test_core.c
